--- a/index.html
+++ b/index.html
@@ -75,6 +75,34 @@
             aria-describedby="basic-addon2"><button onclick="f()" type="button">Button</button>
         
     </form>
+    <section class="text">
+        <p>Yeni bir arama başlatın</p> 
+        <span>Ders veya kaynak bulmak için</span>
+    </section>
+    <section class="footer">
+        <ul>
+            <li>Udemy Business</li>
+            <li>Udemy'de Eğitim verin</li>
+            <li>Uygulamayı edinin</li>
+            <li>Hakkımızda</li>
+            <li>İletişim</li>
+        </ul>
+        <ul>
+            <li>Kariyer</li>
+            <li>Blog</li>
+            <li>Yardım ve Destek</li>
+            <li>İş Ortaklığı</li>
+            <li>Yatırımcılar</li>
+        </ul>
+        <ul>
+            <li>Koşullar</li>
+            <li>Gizlilik politikası</li>
+            <li>Çerez ayarları</li>
+            <li>Site haritası</li>
+            <li>Erişilebilirlik beyanı</li>
+        </ul>
+    </section>
+
 
     <script src="index.js"></script>
 </body>
